--- a/MovieDB/templates/index.html
+++ b/MovieDB/templates/index.html
@@ -1,4 +1,8 @@
 {% extends 'base.html' %}
 {% block main_block %}
-    <h1>{{ page_header }}</h1>
+    <div id="index_content" class="jumbotron">
+        <div class="container">
+            <h1 class="">{{ page_header }}</h1>
+        </div>
+    </div>
 {% endblock %}
