--- a/MovieDB/static/css/style_search.css
+++ b/MovieDB/static/css/style_search.css
@@ -1,44 +1,36 @@
-#search_control {
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 40px;
-    padding-bottom: 40px;
+/*#search_control {*/
+    /*text-align: center;*/
+    /*margin-left: auto;*/
+    /*margin-right: auto;*/
+    /*padding-top: 40px;*/
+    /*padding-bottom: 40px;*/
     /*font-size: large;*/
-}
-#search_control ul {
-    list-style-type: none;
-    margin: auto;
-    padding: 0px;
-    overflow: visible;
-    display: inline-block;
-}
-#search_control li {
-    float: left;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-#search_control input {
-    padding: 6px;         
-}
-#search_box {
-    width: 400px;    
-}
-
-/*.btn {*/
-  /*-webkit-border-radius: 5;*/
-  /*-moz-border-radius: 5;*/
-  /*border-radius: 5px;*/
-  /*font-family: Arial;*/
-  /*color: #3498db;*/
-  /*font-size: 20px;*/
-  /*background: #ffffff;*/
-  /*padding: 10px 20px 10px 20px;*/
-  /*border: solid #3498db 2px;*/
-  /*text-decoration: none;*/
+/*}*/
+/*#search_control ul {*/
+    /*list-style-type: none;*/
+    /*margin: auto;*/
+    /*padding: 0px;*/
+    /*overflow: visible;*/
+    /*display: inline-block;*/
+/*}*/
+/*#search_control li {*/
+    /*float: left;*/
+    /*margin-left: 10px;*/
+    /*margin-right: 10px;*/
+/*}*/
+/*#search_control input {*/
+    /*padding: 6px;*/
+/*}*/
+/*#search_box {*/
+    /*width: 400px;*/
 /*}*/
 
-/*.btn:hover {*/
-  /*background: #c4e1f2;*/
-  /*text-decoration: none;*/
-/*}*/
+#search_form {
+
+}
+
+#search_form input {
+    /*margin-left: 8px;*/
+    /*margin-right: 8px;*/
+    /*font-size: medium;*/
+}
