--- a/MovieDB/templates/base.html
+++ b/MovieDB/templates/base.html
@@ -18,22 +18,42 @@
 
 <body>
 <div id="master_container">
-    <nav id="navbar" class="navbar navbar-inverse">
-        <div class="container-fluid">
+    <nav id="navbar" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
             <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    </button>
                 <a class="navbar-brand" href="{{ home_url }}">MovieDB</a>
             </div>
-            <div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div id="navbar-collapse" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    {% for item in nav_items %}
-                        <li><a href="{{ item.url }}">{{ item.text }}</a></li>
+                    {% for top_item in nav_items %}
+                        {% if top_item.type == 'item' %}
+                            <li><a href="{{ top_item.url }}">{{ top_item.text }}</a></li>
+                        {% elif top_item.type == 'dropdown' %}
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                                    {{ top_item.text }}<span class="caret"></span>
+                                </a>
+                                <ul class="dropdown-menu" role="menu">
+                            {% for sub_item in top_item.children %}
+                                <li><a href="{{ sub_item.url }}">{{ sub_item.text }}</a></li>
+                            {% endfor %}
+                                </ul>
+                            </li>
+                        {% endif %}
                     {% endfor %}
                 </ul>
-                <form class="navbar-form navbar-right" role="form">
+                <form id="search_form" class="navbar-form navbar-right" role="search" method="get">
                     <div class="form-group">
                         <input type="text" id="search_input" class="form-control" placeholder="Search..." maxlength="200">
                     </div>
-                    <button id="search_submit_button" type="submit" class="btn btn-primary">Search</button>
+                    <button id="search_submit_button" type="submit" class="btn btn-primary">Submit</button>
                 </form>
             </div>
         </div>
@@ -43,8 +63,7 @@
         {% block main_block %}{% endblock %}
     </div>
 
-    <div id="footer">
-        |
+    <div id="footer">|
         {% for item in nav_items %}
             <a class="btn-link" href="{{ item.url }}">{{ item.text }}</a> |
         {% endfor %}
