--- a/MovieDB/templates/browse.html
+++ b/MovieDB/templates/browse.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
 {% block main_block %}
-    <h1>{{ page_header }}</h1>
+    <div class="container">
+        <h1 class="">{{ page_header }}</h1>
+    </div>
 {% endblock %}
