--- a/MovieDB/templates/base.html
+++ b/MovieDB/templates/base.html
@@ -49,11 +49,17 @@
                         {% endif %}
                     {% endfor %}
                 </ul>
-                <form id="search_form" class="navbar-form navbar-right" role="search" method="get">
+                <form id="search_form" class="navbar-form navbar-right" role="search" method="get" action="{% url 'SearchResults' %}">
                     <div class="form-group">
-                        <input type="text" id="search_input" class="form-control" placeholder="Search..." maxlength="200">
+                        <div class="input-group">
+                            <input class="form-control" id="id_search_term" maxlength="200" name="search_term" placeholder="Search..." type="text">
+                            <span class="input-group-btn">
+                                <button class="btn btn-default" id="search_submit_button" type="submit">
+                                    <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                                </button>
+                            </span>
+                        </div>
                     </div>
-                    <button id="search_submit_button" type="submit" class="btn btn-primary">Submit</button>
                 </form>
             </div>
         </div>
