--- a/MovieDB/templates/search_results.html
+++ b/MovieDB/templates/search_results.html
@@ -1,3 +1,6 @@
 {% extends 'base.html' %}
 {% block main_block %}
+    {% for result in search_results %}
+        <p>{{ result }}</p>
+    {% endfor %}
 {% endblock %}
