--- a/MovieDB/templates/search_results.html
+++ b/MovieDB/templates/search_results.html
@@ -2,18 +2,26 @@
 {% block main_block %}
     <div class="jumbotron">
         <div class="container">
-            <h1>Movies</h1>
-            {% for movie in movie_results %}
-                <p>{{ movie.title }}</p>
-            {% endfor %}
-            <h1>Actors</h1>
-            {% for actor in actor_results %}
-                <p>{{ actor.first }} {{ actor.last }}</p>
-            {% endfor %}
-            <h1>Directors</h1>
-            {% for director in director_results %}
-                <p>{{ director.first }} {{ director.last }}</p>
-            {% endfor %}
+            <ul class="list-group col-md-4">
+                <h2>Movies</h2>
+                {% for movie in movie_results %}
+                    <li class="list-group-item">{{ movie.title }}</li>
+                {% endfor %}
+            </ul>
+
+            <ul class="list-group col-md-4">
+                <h2>Actors</h2>
+                {% for actor in actor_results %}
+                    <li class="list-group-item">{{ actor.first }} {{ actor.last }}</li>
+                {% endfor %}
+            </ul>
+
+            <ul class="list-group col-md-4">
+                <h2>Directors</h2>
+                {% for director in director_results %}
+                    <li class="list-group-item">{{ director.first }} {{ director.last }}</li>
+                {% endfor %}
+            </ul>
         </div>
     </div>
 {% endblock %}
