Added 'show more' list item as a link to seearch results columns

--- a/MovieDB/templates/index.html
+++ b/MovieDB/templates/index.html
@@ -5,76 +5,13 @@
             <h1 class="">{{ page_header }}</h1>
 
             <h2>Page section</h2>
-
-            <p>Lorem ipsum dolor sit amet, in illum detraxit mea, clita
-                mediocritatem sea ea. Sit cu modus tamquam, mel altera evertitur
-                ei. Te duo recteque partiendo, ea mei primis recusabo, ut doming
-                verterem suscipiantur usu. Dico perpetua dissentiet ne vim,
-                sapientem interpretaris ea mei. Tritani graecis te sed, per ad
-                eros apeirian.
-
-                Has an malorum verterem, nam ut prompta appareat, duo mazim
-                quodsi dolorem cu. Id summo corpora repudiare mel, no posse
-                ullamcorper voluptatibus ius. Populo fabulas suavitate an mei,
-                ius ut adipisci intellegebat disputationi. In tation adipisci
-                molestiae sed, cu omnes homero quo. Affert doctus laoreet eam
-                ea. Mucius inciderint ius at, legere option debitis ei sit.
-
-                Ad adhuc soluta platonem pri. In debet animal integre qui,
-                aperiam consetetur scribentur nam eu, ei vel quidam nemore
-                possim. Assum inimicus evertitur sed id, ea duo stet
-                consectetuer. Cum id ferri meliore vivendo. Ea nam maiorum
-                repudiare, pri ad vivendo nominati, cu mei movet elitr albucius.
-
-                Veniam veritus his at. Et nam volumus ocurreret. In nam nisl
-                disputationi voluptatibus. Dolores iracundia ex eum, sea mucius
-                tamquam in, at mea eius illum populo. Id sea consul audiam, ius
-                te aeque dicit. Putent percipit reprehendunt ex eam, no mei
-                primis saperet definitiones. Ut oblique incorrupte vis, dolor
-                aliquid sapientem ei his.
-
-                Est eu libris diceret corrumpit, nec mutat solum explicari ex.
-                At quod fuisset vim, mutat postea convenire duo an. Sit
-                qualisque theophrastus ut. Nisl admodum dissentiet cu eum. Purto
-                posidonium intellegebat duo ex, at invidunt expetenda vituperata
-                eos. Perfecto reprehendunt sea an, esse graecis inciderint cum
-                ne.</p>
+            <p>{% lorem 3 %}</p>
 
             <h2>Page section</h2>
+            <p>{% lorem 3 %}</p>
 
-            <p>Lorem ipsum dolor sit amet, in illum detraxit mea, clita
-                mediocritatem sea ea. Sit cu modus tamquam, mel altera evertitur
-                ei. Te duo recteque partiendo, ea mei primis recusabo, ut doming
-                verterem suscipiantur usu. Dico perpetua dissentiet ne vim,
-                sapientem interpretaris ea mei. Tritani graecis te sed, per ad
-                eros apeirian.
-
-                Has an malorum verterem, nam ut prompta appareat, duo mazim
-                quodsi dolorem cu. Id summo corpora repudiare mel, no posse
-                ullamcorper voluptatibus ius. Populo fabulas suavitate an mei,
-                ius ut adipisci intellegebat disputationi. In tation adipisci
-                molestiae sed, cu omnes homero quo. Affert doctus laoreet eam
-                ea. Mucius inciderint ius at, legere option debitis ei sit.
-
-                Ad adhuc soluta platonem pri. In debet animal integre qui,
-                aperiam consetetur scribentur nam eu, ei vel quidam nemore
-                possim. Assum inimicus evertitur sed id, ea duo stet
-                consectetuer. Cum id ferri meliore vivendo. Ea nam maiorum
-                repudiare, pri ad vivendo nominati, cu mei movet elitr albucius.
-
-                Veniam veritus his at. Et nam volumus ocurreret. In nam nisl
-                disputationi voluptatibus. Dolores iracundia ex eum, sea mucius
-                tamquam in, at mea eius illum populo. Id sea consul audiam, ius
-                te aeque dicit. Putent percipit reprehendunt ex eam, no mei
-                primis saperet definitiones. Ut oblique incorrupte vis, dolor
-                aliquid sapientem ei his.
-
-                Est eu libris diceret corrumpit, nec mutat solum explicari ex.
-                At quod fuisset vim, mutat postea convenire duo an. Sit
-                qualisque theophrastus ut. Nisl admodum dissentiet cu eum. Purto
-                posidonium intellegebat duo ex, at invidunt expetenda vituperata
-                eos. Perfecto reprehendunt sea an, esse graecis inciderint cum
-                ne.</p>
+            <h2>Page section</h2>
+            <p>{% lorem 3 %}</p>
         </div>
     </div>
 {% endblock %}
