--- a/MovieDB/static/css/style_master.css
+++ b/MovieDB/static/css/style_master.css
@@ -11,7 +11,7 @@ html, body {
     min-height: 100%;
     width: 100%;
     position: relative;
-    background-color: #f6f6f6;
+    /*background-color: #f6f6f6;*/
 }
 #main {
     /*padding: 20px;*/
@@ -24,4 +24,31 @@ html, body {
 .error {
     color: red;
     text-transform: none;
+}
+
+.btn-circle {
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.428571429;
+  border-radius: 15px;
+}
+
+.btn-circle.btn-lg {
+  width: 50px;
+  height: 50px;
+  padding: 10px 16px;
+  font-size: 18px;
+  line-height: 1.33;
+  border-radius: 25px;
+}
+.btn-circle.btn-xl {
+  width: 70px;
+  height: 70px;
+  padding: 10px 16px;
+  font-size: 24px;
+  line-height: 1.33;
+  border-radius: 35px;
 }
