--- a/MovieDB/templates/browse.html
+++ b/MovieDB/templates/browse.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block main_block %}
-    <div class="container">
-        <h1 class="">{{ page_header }}</h1>
+    <div class="jumbotron">
+        <div class="container">
+            <h1>{{ page_header }}</h1>
+        </div>
     </div>
 {% endblock %}
