--- a/MovieDB/templates/base.html
+++ b/MovieDB/templates/base.html
@@ -19,7 +19,7 @@
 <body>
 <div id="master_container">
     <nav id="navbar" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
+        <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
@@ -54,7 +54,7 @@
                         <div class="input-group">
                             <input class="form-control" id="id_search_term" maxlength="200" name="search_term" placeholder="Search..." type="text">
                             <span class="input-group-btn">
-                                <button class="btn btn-default" id="search_submit_button" type="submit">
+                                <button class="btn btn-primary" id="search_submit_button" type="submit">
                                     <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                                 </button>
                             </span>
