--- a/MovieDB/templates/base.html
+++ b/MovieDB/templates/base.html
@@ -9,71 +9,20 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="{% static 'css/style_master.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style_navbar.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style_footer.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style_search.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style_result.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style_main.css' %}">
 </head>
 
 <body>
-<div id="master_container">
-    <nav id="navbar" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    </button>
-                <a class="navbar-brand" href="{{ home_url }}">MovieDB</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div id="navbar-collapse" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    {% for top_item in nav_items %}
-                        {% if top_item.type == 'item' %}
-                            <li><a href="{{ top_item.url }}">{{ top_item.text }}</a></li>
-                        {% elif top_item.type == 'dropdown' %}
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                                    {{ top_item.text }}<span class="caret"></span>
-                                </a>
-                                <ul class="dropdown-menu" role="menu">
-                            {% for sub_item in top_item.children %}
-                                <li><a href="{{ sub_item.url }}">{{ sub_item.text }}</a></li>
-                            {% endfor %}
-                                </ul>
-                            </li>
-                        {% endif %}
-                    {% endfor %}
-                </ul>
-                <form id="search_form" class="navbar-form navbar-right" role="search" method="get" action="{% url 'SearchResults' %}">
-                    <div class="form-group">
-                        <div class="input-group">
-                            <input class="form-control" id="id_search_term" maxlength="200" name="search_term" placeholder="Search..." type="text">
-                            <span class="input-group-btn">
-                                <button class="btn btn-primary" id="search_submit_button" type="submit">
-                                    <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                                </button>
-                            </span>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </nav>
 
-    <div id="main">
+{% include 'navbar.html' %}
+
+<div id="master_container">
+
+    <div id="main" class="jumbotron">
         {% block main_block %}{% endblock %}
     </div>
 
-    <div id="footer">|
-        {% for item in nav_items %}
-            <a class="btn-link" href="{{ item.url }}">{{ item.text }}</a> |
-        {% endfor %}
-    </div>
+    {% include 'footer.html' %}
 </div>
 </body>
 
