Removed redundant templates. Added temp links to search result items.

--- a/MovieDB/templates/footer.html
+++ b/MovieDB/templates/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3">
-                <a class="" href="{% url 'index' %}">
+                <a class="" href="{% url 'Index' %}">
                     <h3><span class="glyphicon glyphicon-home"></span> MovieDB</h3>
                 </a>
             </div>
