--- a/MovieDB/templates/navbar.html
+++ b/MovieDB/templates/navbar.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'index' %}"><span class="glyphicon glyphicon-home"></span> MovieDB</a>
+            <a class="navbar-brand" href="{% url 'Index' %}"><span class="glyphicon glyphicon-home"></span> MovieDB</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div id="navbar-collapse" class="collapse navbar-collapse">
