--- a/MovieDB/templates/browse.html
+++ b/MovieDB/templates/browse.html
@@ -1,6 +1,25 @@
 {% extends 'base.html' %}
 {% block main_block %}
     <div class="container">
-        <h1>{{ page_header }}</h1>
+
+        <div class="row">
+            <div class="col-lg-12">
+                <h1>{{ page_header }}</h1>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading"><h3>{{ page_header }}</h3></div>
+                    <ul class="list-group">
+                        {% for movie in movie_results %}
+                            <a class="list-group-item" href={% url 'MovieDetail' %}>{{ movie.title }} ({{ movie.year }}, {{ movie.rating }})</a>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+        </div>
+
     </div>
 {% endblock %}
