Added pagination to browse_movie page. Need to add to remaining browse pages.

--- a/MovieDB/static/css/style_main.css
+++ b/MovieDB/static/css/style_main.css
@@ -39,11 +39,11 @@ html, body {
 
 #footer h4 {
     /*color: cornflowerblue;*/
+    color: whitesmoke;
 }
 
 #footer p, a {
     color: #A0A0A0;
-    /*color: gray;*/
 }
 
 .error {
