--- a/MovieDB/templates/browse_actor.html
+++ b/MovieDB/templates/browse_actor.html
@@ -1,25 +1,11 @@
-{% extends 'base.html' %}
-{% block main_block %}
-    <div class="container">
-
-        <div class="row">
-            <div class="col-lg-12">
-                <h1>{{ page_header }}</h1>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="panel panel-default">
-                    <div class="panel-heading"><h3>{{ page_header }}</h3></div>
-                    <ul class="list-group">
-                        {% for actor in actors %}
-                            <a class="list-group-item" href={% url 'ActorDetail' %}>{{ actor.first }} {{ actor.last }}({{ actor.dob }})</a>
-                        {% endfor %}
-                    </ul>
-                </div>
-            </div>
-        </div>
-
+{% extends 'browse_base.html' %}
+{% block paged_content %}
+    <div class="panel panel-default">
+        <div class="panel-heading"><h3>{{ results_header }}</h3></div>
+        <ul class="list-group">
+            {% for actor in page %}
+                <a class="list-group-item" href={% url 'ActorDetail' %}>{{ actor.first }} {{ actor.last }}({{ actor.dob }})</a>
+            {% endfor %}
+        </ul>
     </div>
 {% endblock %}
