--- a/MovieDB/templates/browse_actor.html
+++ b/MovieDB/templates/browse_actor.html
@@ -4,7 +4,7 @@
         <div class="panel-heading"><h3>{{ results_header }}</h3></div>
         <ul class="list-group">
             {% for actor in page %}
-                <a class="list-group-item" href={% url 'ActorDetail' %}>{{ actor.first }} {{ actor.last }}({{ actor.dob }})</a>
+                <a class="list-group-item" href={% url 'ActorDetail' %}>{{ actor.last }}, {{ actor.first }}({{ actor.dob }})</a>
             {% endfor %}
         </ul>
     </div>
