Adding pics to browse page. WIP.

--- a/MovieDB/templates/base.html
+++ b/MovieDB/templates/base.html
@@ -19,7 +19,7 @@
 
 <div id="master_container">
 
-    <div id="main" class="jumbotron">
+    <div id="main" class="jumbotron text-center">
         {% block main_block %}{% endblock %}
     </div>
 
