--- a/MovieDB/templates/browse_actor.html
+++ b/MovieDB/templates/browse_actor.html
@@ -1,10 +1,24 @@
 {% extends 'browse_base.html' %}
+{% load staticfiles %}
 {% block paged_content %}
-    <div class="panel panel-default">
+    <div class="panel panel-default text-left">
         <div class="panel-heading"><h3>{{ results_header }}</h3></div>
         <ul class="list-group">
             {% for actor in page %}
-                <a class="list-group-item" href={% url 'ActorDetail' %}>{{ actor.last }}, {{ actor.first }}({{ actor.dob }})</a>
+                <a class="list-group-item" href={% url 'ActorDetail' %}>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="row">
+                                <div class="col-md-2">
+                                    <img class="img-thumbnail" src="{% static 'img/default_movie.png' %}">
+                                </div>
+                                <div class="col-md-6">
+                                    {{ actor.last }}, {{ actor.first }}({{ actor.dob }})
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
             {% endfor %}
         </ul>
     </div>
