--- a/MovieDB/templates/browse_director.html
+++ b/MovieDB/templates/browse_director.html
@@ -1,6 +1,6 @@
 {% extends 'browse_base.html' %}
 {% block paged_content %}
-    <div class="panel panel-default">
+    <div class="panel panel-default text-left">
         <div class="panel-heading"><h3>{{ results_header }}</h3></div>
         <ul class="list-group">
             {% for director in page %}
