--- a/MovieDB/templates/browse_actor.html
+++ b/MovieDB/templates/browse_actor.html
@@ -2,19 +2,18 @@
 {% load staticfiles %}
 {% block paged_content %}
     <div class="panel panel-default text-left">
-        <div class="panel-heading"><h3>{{ results_header }}</h3></div>
+        <div class="panel-heading"><h2>{{ results_header }}</h2></div>
         <ul class="list-group">
             {% for actor in page %}
                 <a class="list-group-item" href={% url 'ActorDetail' %}>
                     <div class="row">
                         <div class="col-lg-12">
-                            <div class="row">
-                                <div class="col-md-2">
-                                    <img class="img-thumbnail" src="{% static 'img/default_movie.png' %}">
-                                </div>
-                                <div class="col-md-6">
-                                    {{ actor.last }}, {{ actor.first }}({{ actor.dob }})
-                                </div>
+                            <div class="media-left">
+                                <img class="media-object img-circle" src="{% static 'img/default_person.png' %}">
+                            </div>
+                            <div class="media-body">
+                                <h3 class="media-heading text-primary text-capitalize">{{ actor.last }}, {{ actor.first }}</h3>
+                                <h4>DOB: {{ actor.dob }}</h4>
                             </div>
                         </div>
                     </div>
