--- a/MovieDB/templates/browse_director.html
+++ b/MovieDB/templates/browse_director.html
@@ -1,10 +1,23 @@
 {% extends 'browse_base.html' %}
+{% load staticfiles %}
 {% block paged_content %}
     <div class="panel panel-default text-left">
         <div class="panel-heading"><h3>{{ results_header }}</h3></div>
         <ul class="list-group">
             {% for director in page %}
-                <a class="list-group-item" href={% url 'DirectorDetail' %}>{{ director.last }}, {{ director.first}} ({{ director.dob }})</a>
+                <a class="list-group-item" href={% url 'DirectorDetail' %}>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="media-left">
+                                <img class="media-object img-circle" src="{% static 'img/default_person.png' %}">
+                            </div>
+                            <div class="media-body">
+                                <h3 class="media-heading text-primary text-capitalize">{{ director.last }}, {{ director.first }}</h3>
+                                <h4>DOB: {{ director.dob }}</h4>
+                            </div>
+                        </div>
+                    </div>
+                </a>
             {% endfor %}
         </ul>
     </div>
