--- a/MovieDB/templates/browse_movie.html
+++ b/MovieDB/templates/browse_movie.html
@@ -1,10 +1,24 @@
 {% extends 'browse_base.html' %}
+{% load staticfiles %}
 {% block paged_content %}
     <div class="panel panel-default text-left">
         <div class="panel-heading"><h3>{{ results_header }}</h3></div>
         <ul class="list-group">
             {% for movie in page %}
-                <a class="list-group-item" href={% url 'MovieDetail' %}>{{ movie.title }} ({{ movie.year }}, {{ movie.rating }})</a>
+                <a class="list-group-item" href={% url 'MovieDetail' %}>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="row">
+                                <div class="col-md-2">
+                                    <img class="img-thumbnail" src="{% static 'img/default_movie.png' %}">
+                                </div>
+                                <div class="col-md-6">
+                                    {{ movie.title }} ({{ movie.year }}, {{ movie.rating }})
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
             {% endfor %}
         </ul>
     </div>
