--- a/MovieDB/templates/browse_actor.html
+++ b/MovieDB/templates/browse_actor.html
@@ -2,18 +2,20 @@
 {% load staticfiles %}
 {% block paged_content %}
     <div class="panel panel-default text-left">
-        <div class="panel-heading"><h2>{{ results_header }}</h2></div>
+        <div class="panel-heading">
+            <h2><span class="glyphicon glyphicon-user"></span> {{ results_header }}</h2>
+        </div>
         <ul class="list-group">
             {% for actor in page %}
                 <a class="list-group-item" href={% url 'ActorDetail' %}>
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="media-left">
-                                <img class="media-object img-circle" src="{% static 'img/default_person.png' %}">
+                                <img class="media-object img-circle" width="120" height="120" src="{% static 'img/default_person.png' %}">
                             </div>
                             <div class="media-body">
                                 <h3 class="media-heading text-primary text-capitalize">{{ actor.last }}, {{ actor.first }}</h3>
-                                <h4>DOB: {{ actor.dob }}</h4>
+                                <strong>DOB: </strong> {{ actor.dob }}
                             </div>
                         </div>
                     </div>
