--- a/MovieDB/templates/browse_movie.html
+++ b/MovieDB/templates/browse_movie.html
@@ -2,20 +2,23 @@
 {% load staticfiles %}
 {% block paged_content %}
     <div class="panel panel-default text-left">
-        <div class="panel-heading"><h3>{{ results_header }}</h3></div>
+        <div class="panel-heading">
+            <h3><span class="glyphicon glyphicon-film"></span> {{ results_header }}</h3>
+        </div>
         <ul class="list-group">
             {% for movie in page %}
                 <a class="list-group-item" href={% url 'MovieDetail' %}>
                     <div class="row">
                         <div class="col-lg-12">
-                            <div class="row">
-                                <div class="col-md-2">
-                                    <img class="img-thumbnail" src="{% static 'img/default_movie.png' %}">
+                                <div class="media-left">
+                                    <img class="" width="100" height="" src="{% static 'img/default_movie.png' %}">
                                 </div>
-                                <div class="col-md-6">
-                                    {{ movie.title }} ({{ movie.year }}, {{ movie.rating }})
+                                <div class="media-body">
+                                    <h3 class="media-heading text-primary text-capitalize">{{ movie.title }}</h3>
+                                    <strong>Year:</strong> {{ movie.year }}
+                                    </br>
+                                    <strong>Rating:</strong> {{ movie.rating }}
                                 </div>
-                            </div>
                         </div>
                     </div>
                 </a>
