--- a/MovieDB/templates/index.html
+++ b/MovieDB/templates/index.html
@@ -3,15 +3,36 @@
     <div class="container">
         <h1 class="">{{ page_header }}</h1>
 
-        <h2>Page section</h2>
+        <div class="alert alert-info alert-dismissable fade in" role="alert">
+            <button type="button" class="close" data-dismiss="alert"
+                    aria-label="Close"><span aria-hidden="true">&times;</span>
+            </button>
+            <strong>What's Up!</strong> Go ahead and play with the site
+        </div>
+
+        <div class="alert alert-success alert-dismissable fade in" role="alert">
+            <button type="button" class="close" data-dismiss="alert"
+                    aria-label="Close"><span aria-hidden="true">&times;</span>
+            </button>
+            <strong>What Works?</strong> Navigation, Search, Browse pages
+        </div>
+
+        <div class="alert alert-danger alert-dismissable fade in" role="alert">
+            <button type="button" class="close" data-dismiss="alert"
+                    aria-label="Close"><span aria-hidden="true">&times;</span>
+            </button>
+            <strong>What Doesn't Work?</strong> Everything else...
+        </div>
+
+        <h2>Filler Text</h2>
 
         <p>{% lorem 3 %}</p>
 
-        <h2>Page section</h2>
+        <h2>Filler Text</h2>
 
         <p>{% lorem 3 %}</p>
 
-        <h2>Page section</h2>
+        <h2>Filler Text</h2>
 
         <p>{% lorem 3 %}</p>
     </div>
