--- a/MovieDB/templates/404.html
+++ b/MovieDB/templates/404.html
@@ -26,13 +26,22 @@
             margin: 2em auto;
         }
 
+        div {
+            padding: 20px;
+        }
+
         h1 {
             color: #555;
-            font-size: 2em;
+            font-size: 4em;
             font-weight: 400;
         }
 
+        h2 {
+            font-size: 3em;
+        }
+
         p {
+            font-size: 1.5em;
             margin: 0 auto;
             width: 280px;
         }
@@ -52,9 +61,21 @@
 
     </style>
 </head>
+
 <body>
-    <h1>Page Not Found</h1>
-    <p>Sorry, but the page you were trying to view does not exist.</p>
+<div>
+    <h1>404</h1>
+
+    <h2>Page Not Found</h2>
+    {#    <p>Sorry, but the page you were trying to view does not exist.</p>#}
+</div>
+<div>
+    <p>You must be lost. This page is under construction.</p>
+</div>
+<div>
+    <p><i>Jimbo (aka the boss)</i></p>
+</div>
+
 </body>
 </html>
 <!-- IE needs 512+ bytes: http://blogs.msdn.com/b/ieinternals/archive/2010/08/19/http-error-pages-in-internet-explorer.aspx -->
