--- a/MovieDB/templates/browse_movie.html
+++ b/MovieDB/templates/browse_movie.html
@@ -3,9 +3,9 @@
 {% block paged_content %}
     <div class="panel panel-default text-left">
         <div class="panel-heading">
-            <h3><span class="glyphicon glyphicon-film"></span> {{ results_header }}</h3>
+            <h2><span class="glyphicon glyphicon-film"></span> {{ results_header }}</h2>
         </div>
-        <ul class="list-group">
+        <div class="list-group">
             {% for movie in page %}
                 <a class="list-group-item" href={% url 'MovieDetail' %}>
                     <div class="row">
@@ -23,6 +23,6 @@
                     </div>
                 </a>
             {% endfor %}
-        </ul>
+        </div>
     </div>
 {% endblock %}
