More movie details page work and other stuff.

--- a/MovieDB/templates/404.html
+++ b/MovieDB/templates/404.html
@@ -70,11 +70,11 @@
     {#    <p>Sorry, but the page you were trying to view does not exist.</p>#}
 </div>
 <div>
-    <p>You must be lost. This page is under construction.</p>
+    <p>Whoops! Looks like the page you were looking for doesn't exist.</p>
 </div>
-<div>
-    <p><i>Jimbo (aka the boss)</i></p>
-</div>
+{#<div>#}
+{#    <p><i>Jimbo (aka the boss)</i></p>#}
+{#</div>#}
 
 </body>
 </html>
