--- a/MovieDB/templates/footer.html
+++ b/MovieDB/templates/footer.html
@@ -1,4 +1,4 @@
-<div id="footer">
+<footer id="footer" class="footer">
     <div class="container">
         <div class="row">
             <div class="col-md-3">
@@ -20,4 +20,4 @@
             {% endfor %}
         </div>
     </div>
-</div>
+</footer>
