More work with movie details. WIP.

--- a/MovieDB/templates/movie_detail.html
+++ b/MovieDB/templates/movie_detail.html
@@ -22,8 +22,8 @@
                                 <dd>{{ movie.year }}</dd>
                                 <dt>Company</dt>
                                 <dd>{{ movie.company }}</dd>
-                                <dt>Rating</dt>
-                                <dd>{{ movie.rating }}</dd>
+                                <dt>Avg. User Rating</dt>
+                                <dd>{{ avg_user_rating }}</dd>
                                 <dt>Genres</dt>
                                 {% for genre in genres %}
                                     <dd>{{ genre }}</dd>
